fix: #1521 In some cases a vertical scrollbar appeared in the mathfield

--- a/css/core.less
+++ b/css/core.less
@@ -9,9 +9,11 @@
   position: absolute;
   width: 1px;
   height: 1px;
+  margin: -1px;
   padding: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
   white-space: nowrap;
   border: 0;
 }
